# tachograph-card-client

./: .env.production  AGENTS.md  index.html  package-lock.json  package.json  postcss.config.js  quasar.config.ts
.github/workflows/: release.yml  releases.yaml
src/: communicationEventListeners.ts  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons_old/: icon.icns
src-tauri/src/: app_connect.rs  config.rs  global_app_handle.rs  lib.rs  logger.rs  main.rs  mqtt.rs  smart_card.rs
src/boot/: error-logging.ts  frontend-loaded.ts  pinia.ts  route-flow.ts  sentry.ts
src/components/: CustomTitleBar.vue  SmartCardList.vue  TachoMainComponent.vue  models.ts
src/composables/: useFleet.ts  useRouteFlow.ts
src/css/: app.scss  quasar.variables.scss
src/enums/: routes.ts
src/layouts/: AppLayout.vue  BaseLayout.vue  BlankLayout.vue  MainLayout.vue
src/pages/: ErrorNotFound.vue  IndexPage.vue  LaunchingScreen.vue  OutdatedVersionPage.vue
src/pages/app/: AuthScreen.vue  HomeScreen.vue
src/pages/errors/: Maintenance.vue  Offline.vue  Outdated.vue
src/router/: index.ts  routes.ts
src/routes/flows/: authRouteFlow.ts  launchRouteFlow.ts  maintenanceRouteFlow.ts  (+2 more)
src/services/: api.ts  auth.ts  communicationEvents.ts  connectionManager.ts  deviceRuntime.ts  fleet.ts  logger.ts  outdatedApp.ts  routeFlow.ts  routerNavigation.ts  transportklok.ts  windowControls.ts
src/stores/: useAppStore.ts  useAuthStore.ts  useFleetStore.ts  useFlespiStore.ts  useNetworkStore.ts
