[package]
name = "tacho-bridge-application"
version = "0.7.0"
description = "Tachograph authentication application"
authors = ["Shatilo Evgeny"]
license = ""
repository = "https://git.gurtam.net/shev/flespi_tca"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tauri = { version = "2.2.4", features = ["tray-icon"] }
reqwest = { version = "0.12.12", features = ["json"] }
log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
pcsc = "2.9.0"
hex = "0.4.3"
rumqttc = "0.24.0"
fern = "0.7.1"
chrono = "0.4.39"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
native-tls = "0.2.13"
tokio-native-tls = "0.3.1"
sys-info = "0.9.1"
once_cell = "1.21.3"

